--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 	label { font-size: 1.2em; }
 
 .editor-container { margin-left: 30px; width: 100%; padding-top: 15px; margin-right : 30px; margin-bottom: 15px; }
-input[type=text] {  background: none repeat scroll 0 0 #FCFCFC;
+input[type="text"] {  background: none repeat scroll 0 0 #FCFCFC;
 /*//border-color: #DDDDDD;*/
 box-shadow: 1px 1px 0 #FFFFFF;   border-radius: 3px;
 		color: #333333;
@@ -16,32 +16,47 @@ box-shadow: 1px 1px 0 #FFFFFF;   border-radius: 3px;
 		min-height: 28px;
 		padding : 0 10px 0 8px;
 		 width: 370px; border: 1px solid #CCCCCC;}
+input[type="text"]:focus { border-color: #60B044; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.075) inset, 0 0 5px rgba(81, 167, 23, 0.5) }
 
 .button { background-color: #60B044;
 	background-image: linear-gradient(#8ADD6D, #60B044);
 	background-repeat: repeat-x;
 	border-color: #5CA941;
-	color: #FFFFFF;
+	color: #fff;
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); border-radius: 3px;
 	cursor: pointer;
 	display: inline-block;
 	font-size: 1.1em;
 	padding: 6px 12px;
 	vertical-align: middle;
-	white-space: nowrap; margin-right : 15px; }
+	white-space: nowrap; margin-right : 15px; color: #ffffff !important; }
 
 .cancel.button { background-color: #b04444;
 	background-image: linear-gradient(#dd6d6d, #b04444);
 	background-repeat: repeat-x;
-	border-color: #b04444; }
+	border-color: #b04444;  color : #fff; }
 
-/*tree { border: 1px solid #CCCCCC; width: 100%; margin-top: 15px; border-radius: 3px; }*/
-	/*thead tr { background-color: #EAEAEA; background-image: linear-gradient(#FAFAFA, #EAEAEA); background-repeat: repeat-x; }*/
-	/*table tr { border: 1px solid #CCCCCC; }*/
-	/*table tr td { padding: 6px 12px; }*/
+.inner-table { border: 1px solid #CCCCCC; width: 100%; margin-top: 15px; border-radius: 3px; }
+	.inner-table thead tr { background-color: #EAEAEA; background-image: linear-gradient(#FAFAFA, #EAEAEA); background-repeat: repeat-x; }
+	.inner-table tr { border: 1px solid #CCCCCC; }
+	.inner-table tr td { padding: 6px 12px; }
+	.inner-table tr td input { border: none; padding: 0; }
 
-	.json { list-style-type: none; margin-left: 40px; color: #333333; }
-		.json li { margin: 5px 0; }
-		.json li span { font-weight: bold; color: #333333; margin-right : 5px; }
-		.json li input { width: 100%; }
+	.json { webkit-box-shadow: inset 8px 10px 24px -14px rgba(238,238,238,1);
+		-moz-box-shadow: inset 8px 10px 24px -14px rgba(238,238,238,1);
+		box-shadow: 8px 10px 24px -14px #eaeaea inset; list-style-type: none; margin-left: 40px; color: #333333; border-left : 1px solid #eee; border-top : 1px solid #eee; padding-left : 12px;  }
 
+.json li { margin: 5px 0; display : block; }
+
+.json li span { font-weight: bold; color: #333333; margin-right : 5px; }
+		.json li input {  -moz-box-sizing: padding-box; box-sizing: border-box; width: 100%; }
+
+.editor-container span { color: #ffffff; }
+
+.editor-container ul li span { color: #60B044; }
+.editor-container ul li ul li span {color :  #dd6d6d;}
+.editor-container ul li ul li ul li span {color: #6d8fdd;}
+.editor-container ul li ul li ul li ul li span {color: #d49c66;}
+
+.save-field { display: none; background: url('../img/ok-green.png') no-repeat 0 0; cursor: pointer; width: 16px; height: 16px; margin-left : -37px; margin-right : 40px; margin-top : 7px; position : absolute; }
+.undo { background: url('../img/close_box_red.png') no-repeat 0 0; cursor: pointer; width: 16px; height: 16px; position: absolute; margin-left : -57px; margin-top: 7px; display: none; }
