updated directive ‘tree’ and styles bug fixes

--- a/js/views/main.html
+++ b/js/views/main.html
@@ -11,7 +11,7 @@
 			</div>
 		</div>
 
-		<tree json="test" test="kiss" ng-model="json" style="margin-left: -40px; margin-top: 30px; display: block; margin-right: 300px;"></tree>
+		<tree json="test" test="kiss" ng-model="test" id="json-tree"></tree>
 
 	</div>
 
