--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,9 @@
 
 	label { font-size: 1.2em; }
 
-.editor-container { margin-left: 30px; width: 100%; padding-top: 15px; margin-right : 30px; margin-bottom: 15px; }
+	#json-tree { margin-top: 30px; display: block; margin-right: 300px; margin-left : -40px; }
+
+.editor-container { padding-top: 15px; margin-bottom: 15px; display : block; padding-left : 30px; }
 input[type="text"] {  background: none repeat scroll 0 0 #FCFCFC;
 /*//border-color: #DDDDDD;*/
 box-shadow: 1px 1px 0 #FFFFFF;   border-radius: 3px;
@@ -60,3 +62,6 @@ input[type="text"]:focus { border-color: #60B044; box-shadow: 0 1px 2px rgba(0, 
 
 .save-field { display: none; background: url('../img/ok-green.png') no-repeat 0 0; cursor: pointer; width: 16px; height: 16px; margin-left : -37px; margin-right : 40px; margin-top : 7px; position : absolute; }
 .undo { background: url('../img/close_box_red.png') no-repeat 0 0; cursor: pointer; width: 16px; height: 16px; position: absolute; margin-left : -57px; margin-top: 7px; display: none; }
+
+.view { background: url("../img/arrow-expanded.png") no-repeat 0 0; width: 16px; height: 16px; display : block; float : right; cursor: pointer; }
+.view.active { background: url("../img/arrow-expand.png") no-repeat 0 0;}
