last general fixes for stable version

--- a/js/views/main.html
+++ b/js/views/main.html
@@ -6,7 +6,7 @@
 		<div>
 			<input id="url" type="text" ng-model="url" placeholder="Type the address to get JSON" />
 			<span class="button" ng-click="getJSON();">Edit</span>
-			<div style=" float: right; margin-right: 30%;">
+			<div style=" float: right; margin-right: 145px; margin-top: -30px; position: fixed; right: 0;">
 				<span class="button" ng-click="saveJSON();">Save</span><span class="button cancel">Cancel</span>
 			</div>
 		</div>
