--- a/css/general.css
+++ b/css/general.css
@@ -1,30 +1,10 @@
 html, body { height: 100%; width: 100%;}
 html, body, div, ul, ol, li, dl, dt, dd, h1, h2, h3, h4, h5, h6, pre, form, p, blockquote, fieldset, input, abbr, article, aside, command, details, figcaption, figure, footer, header, hgroup, mark, meter, nav, output, progress, section, summary, time {
-	margin: 0;
-	padding: 0;
-	font: 12px/18px Helvetica, Arial, sans-serif;
-}
-h1, h2, h3, h4, h5, h6, pre, code, address, caption, cite, code, em, strong, th, figcaption {
-	font-size: 1em;
-	font-style: normal;
-	font-weight: normal;
-}
-fieldset, iframe {
-	border: medium none;
-}
-caption, th {
-	text-align: left;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-article, aside, footer, header, hgroup, nav, section, figure, figcaption {
-	display: block;
-}
-html {
-	background-color: #FFFFFF;
-}
-.clear {
-	clear: both;
-}
+	margin: 0; padding: 0; font: 12px/18px Helvetica, Arial, sans-serif; }
+h1, h2, h3, h4, h5, h6, pre, code, address, caption, cite, code, em, strong, th, figcaption { font-size: 1em; font-style: normal; font-weight: normal; }
+fieldset, iframe { border: medium none; }
+caption, th { text-align: left; }
+table { border-collapse: collapse; border-spacing: 0; }
+article, aside, footer, header, hgroup, nav, section, figure, figcaption { display: block; }
+html { background-color: #FFFFFF; }
+.clear { clear: both; }
