--- a/css/style.css
+++ b/css/style.css
@@ -1,67 +1,35 @@
-#title { background-color: #EAEAEA; background-image: linear-gradient(#FAFAFA, #EAEAEA); background-repeat: repeat-x;
-	border: 1px solid #D5D5D5; width: 100%; height: 40px; }
+#title { background-color: #EAEAEA; background-image: linear-gradient(#FAFAFA, #EAEAEA); background-repeat: repeat-x; border: 1px solid #D5D5D5; width: 100%; height: 40px; }
 	#title span { margin-left: 30px; font-size: 2em; color: #333333; line-height: 1.9em; }
-
-	label { font-size: 1.2em; }
-
 	#json-tree { margin-top: 30px; display: block; margin-right: 300px; margin-left : -40px; }
 
 .editor-container { padding-top: 15px; margin-bottom: 15px; display : block; padding-left : 30px; }
-input[type="text"] {  background: none repeat scroll 0 0 #FCFCFC;
-/*//border-color: #DDDDDD;*/
-box-shadow: 1px 1px 0 #FFFFFF;   border-radius: 3px;
-		color: #333333;
-		outline: medium none;
-		vertical-align: middle;
-	margin-right : 15px;
-		font-size: 12px;
-		min-height: 28px;
-		padding : 0 10px 0 8px;
-		 width: 370px; border: 1px solid #CCCCCC;}
-input[type="text"]:focus { border-color: #60B044; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.075) inset, 0 0 5px rgba(81, 167, 23, 0.5) }
+	input[type="text"] {  background: none repeat scroll 0 0 #FCFCFC; box-shadow: 1px 1px 0 #FFFFFF; border-radius: 3px; color: #333333; outline: medium none; vertical-align: middle; margin-right : 15px; font-size: 12px; min-height: 28px; padding : 0 10px 0 8px; width: 370px; border: 1px solid #CCCCCC;}
+	input[type="text"]:focus { border-color: #60B044; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.075) inset, 0 0 5px rgba(81, 167, 23, 0.5) }
 
-.button { background-color: #60B044;
-	background-image: linear-gradient(#8ADD6D, #60B044);
-	background-repeat: repeat-x;
-	border-color: #5CA941;
-	color: #fff;
-	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); border-radius: 3px;
-	cursor: pointer;
-	display: inline-block;
-	font-size: 1.1em;
-	padding: 6px 12px;
-	vertical-align: middle;
-	white-space: nowrap; margin-right : 15px; color: #ffffff !important; }
+.button { background-color: #60B044; background-image: linear-gradient(#8ADD6D, #60B044); background-repeat: repeat-x; border-color: #5CA941; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); border-radius: 3px; cursor: pointer; display: inline-block; font-size: 1.1em; padding: 6px 12px; vertical-align: middle; white-space: nowrap; margin-right: 15px; color: #ffffff !important; }
+.cancel.button { background-color: #b04444; background-image: linear-gradient(#dd6d6d, #b04444); background-repeat: repeat-x; border-color: #b04444;  color: #fff; }
 
-.cancel.button { background-color: #b04444;
-	background-image: linear-gradient(#dd6d6d, #b04444);
-	background-repeat: repeat-x;
-	border-color: #b04444;  color : #fff; }
-
-.inner-table { border: 1px solid #CCCCCC; width: 100%; margin-top: 15px; border-radius: 3px; }
+.inner-table { border: 1px solid #CCCCCC; width: 100%; margin-top: 15px; border-radius: 3px; border-collapse: separate;}
 	.inner-table thead tr { background-color: #EAEAEA; background-image: linear-gradient(#FAFAFA, #EAEAEA); background-repeat: repeat-x; }
-	.inner-table tr { border: 1px solid #CCCCCC; }
-	.inner-table tr td { padding: 6px 12px; }
-	.inner-table tr td input { border: none; padding: 0; }
+	.inner-table thead td { padding: 6px 12px; }
+		.inner-table tr { border: 1px solid #CCCCCC; }
+			.inner-table tbody tr td { padding: 6px 12px; border-top: 1px solid #cccccc;  }
+				.inner-table tr td input { border: none; padding: 0; }
 
-	.json { webkit-box-shadow: inset 8px 10px 24px -14px rgba(238,238,238,1);
-		-moz-box-shadow: inset 8px 10px 24px -14px rgba(238,238,238,1);
-		box-shadow: 8px 10px 24px -14px #eaeaea inset; list-style-type: none; margin-left: 40px; color: #333333; border-left : 1px solid #eee; border-top : 1px solid #eee; padding-left : 12px;  }
+	.json { webkit-box-shadow: inset 8px 10px 24px -14px rgba(238,238,238,1); -moz-box-shadow: inset 8px 10px 24px -14px rgba(238,238,238,1); box-shadow: 8px 10px 24px -14px #eaeaea inset; list-style-type: none; margin-left: 40px; color: #333333; border-left : 1px solid #eee; border-top : 1px solid #eee; padding-left : 12px;  border-radius : 4px; }
 
-.json li { margin: 5px 0; display : block; }
-
-.json li span { font-weight: bold; color: #333333; margin-right : 5px; }
-		.json li input {  -moz-box-sizing: padding-box; box-sizing: border-box; width: 100%; }
+.json li { margin: 5px 0; display: block; }
+	.json li span { font-weight: bold; color: #333333; margin-right: 5px; }
+	.json li input {  -moz-box-sizing: padding-box; box-sizing: border-box; width: 100%; }
 
 .editor-container span { color: #ffffff; }
+	.editor-container ul li span { color: #60B044; }
+		.editor-container ul li ul li span {color :  #dd6d6d;}
+			.editor-container ul li ul li ul li span {color: #6d8fdd;}
+				.editor-container ul li ul li ul li ul li span {color: #d49c66;}
 
-.editor-container ul li span { color: #60B044; }
-.editor-container ul li ul li span {color :  #dd6d6d;}
-.editor-container ul li ul li ul li span {color: #6d8fdd;}
-.editor-container ul li ul li ul li ul li span {color: #d49c66;}
-
-.save-field { display: none; background: url('../img/ok-green.png') no-repeat 0 0; cursor: pointer; width: 16px; height: 16px; margin-left : -37px; margin-right : 40px; margin-top : 7px; position : absolute; }
+.save-field { display: none; background: url('../img/ok-green.png') no-repeat 0 0; cursor: pointer; width: 16px; height: 16px; margin-left: -37px; margin-right: 40px; margin-top: 7px; position: absolute; }
 .undo { background: url('../img/close_box_red.png') no-repeat 0 0; cursor: pointer; width: 16px; height: 16px; position: absolute; margin-left : -57px; margin-top: 7px; display: none; }
 
-.view { background: url("../img/arrow-expanded.png") no-repeat 0 0; width: 16px; height: 16px; display : block; float : right; cursor: pointer; }
+.view { background: url("../img/arrow-expanded.png") no-repeat 0 0; width: 16px; height: 16px; display: block; float: right; cursor: pointer; }
 .view.active { background: url("../img/arrow-expand.png") no-repeat 0 0;}
