--- a/css/style.css
+++ b/css/style.css
@@ -33,3 +33,7 @@
 
 .view { background: url("../img/arrow-expanded.png") no-repeat 0 0; width: 16px; height: 16px; display: block; float: right; cursor: pointer; }
 .view.active { background: url("../img/arrow-expand.png") no-repeat 0 0;}
+
+.ng-invalid { border: 1px solid #ff0000 !important; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.075) inset, 0 0 5px rgba(255, 0, 0, 0.5) !important; background-color: #fcc !important; }
+#json-tree .ng-dirty { border: 1px solid #60B044 !important; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.075) inset, 0 0 5px rgba(81, 167, 23, 0.5); }
+/*#json-tree .ng-pristine { border: 1px solid #60B044 !important; box-shadow: 0 1px 2px rgba(0, 0, 0, 0.075) inset, 0 0 5px rgba(81, 167, 23, 0.5); }*/
